--- a/resources/asset/sass/component/_header.scss
+++ b/resources/asset/sass/component/_header.scss
@@ -1,7 +1,7 @@
 .header {
     background-image: linear-gradient(rgba(0, 0, 255, 0.5),
             rgba(255, 255, 0, 0.5)),
-        url("../img/bg_home1.jpg");
+        url("/public/img/bg_home1.jpg");
     height: 95vh;
     background-size: cover;
     background-position: center;
