--- a/resources/asset/sass/main.scss
+++ b/resources/asset/sass/main.scss
@@ -8,3 +8,8 @@
 @import "base/utilities";
 
 @import "component/header";
+@import "component/column";
+
+@import "bulma/sass/utilities/_all.sass";
+@import "bulma/sass/grid/columns.sass";
+@import "bulma/sass/elements/button.sass"
