--- a/resources/asset/sass/main.scss
+++ b/resources/asset/sass/main.scss
@@ -10,6 +10,15 @@
 @import "component/header";
 @import "component/column";
 
-@import "bulma/sass/utilities/_all.sass";
-@import "bulma/sass/grid/columns.sass";
-@import "bulma/sass/elements/button.sass"
+@import "bulma/sass/utilities/_all";
+@import "bulma/sass/layout/_all";
+@import "bulma/sass/grid/_all";
+@import "bulma/sass/elements/button";
+@import "bulma/sass/components/card";
+@import "bulma/sass/elements/container";
+@import "bulma/sass/elements/image";
+@import "bulma/sass/form/shared";
+@import "bulma/sass/form/select";
+@import "bulma/sass/form/checkbox-radio";
+
+
