--- a/resources/asset/sass/main.scss
+++ b/resources/asset/sass/main.scss
@@ -9,6 +9,8 @@
 
 @import "component/header";
 @import "component/column";
+@import "component/body";
+@import "component/gauge";
 
 @import "bulma/sass/utilities/_all";
 @import "bulma/sass/layout/_all";
