--- a/public/css/index.css
+++ b/public/css/index.css
@@ -274,6 +274,54 @@ body {
   color: indianred;
 }
 
+.lowerBackGround {
+  background-color: rgba(0, 0, 0, 0.8);
+  color: #999;
+  font-family: Hevletica, sans-serif;
+}
+
+.gauge-container {
+  width: 150px;
+  height: 150px;
+  display: block;
+  float: left;
+  padding: 10px;
+  background-color: #222;
+  margin: 7px;
+  border-radius: 3px;
+  position: relative;
+}
+
+.gauge-container > .label {
+  position: absolute;
+  right: 0;
+  top: 0;
+  display: inline-block;
+  background: rgba(0, 0, 0, 0.5);
+  font-family: monospace;
+  font-size: 0.8em;
+  padding: 5px 10px;
+}
+
+.gauge-container > .gauge > .dial {
+  stroke: #eee;
+  stroke-width: 2;
+  fill: rgba(0, 0, 0, 0);
+}
+
+.gauge-container > .gauge > .value {
+  stroke: #2fe3ff;
+  stroke-width: 2;
+  fill: rgba(0, 0, 0, 0);
+}
+
+.gauge-container > .gauge > .value-text {
+  fill: #2fe3ff;
+  font-family: sans-serif;
+  font-weight: bold;
+  font-size: 1em;
+}
+
 @-webkit-keyframes spinAround {
   from {
     -webkit-transform: rotate(0deg);
