--- a/resources/asset/sass/component/_body.scss
+++ b/resources/asset/sass/component/_body.scss
@@ -5,17 +5,18 @@
 }
 
 .decide_me {
-  // background-image: url('/img/decisionHomePage.jpg');
-  // height: 95vh;
-  // background-size: cover;
-  // background-position: center;
+  background-image: url('/img/decisionHomePage.jpg');
+  height: 95vh;
+  background-size: cover;
+  background-position: center;
 
-  height: 300px;
-  width: auto;
-  background-color: blue;
+  // height: 300px;
+  // width: auto;
+  // background-color: blue;
 }
 
 .showDecision {
   font-size: 4rem;
-  color:red;
+  color: white;
+
 }
