--- a/public/css/index.css
+++ b/public/css/index.css
@@ -282,16 +282,41 @@ body {
   font-family: Hevletica, sans-serif;
 }
 
-.decide_me {
-  background-image: url("/img/decisionHomePage.jpg");
-  height: 95vh;
-  background-size: cover;
-  background-position: center;
+.success {
+  height: auto;
+  width: 100%;
+  color: white;
+  padding: 2rem;
 }
 
 .showDecision {
   font-size: 4rem;
-  color: white;
+}
+
+.dec {
+  font-size: 3rem;
+}
+
+hr {
+  border: 1px solid #46A514;
+  border-radius: 23px;
+}
+
+.otherConsideration {
+  background-color: rgba(160, 145, 145, 0.836);
+  color: whitesmoke;
+}
+
+.showDecChart {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.showDecision {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .gauge-container {
