--- a/resources/asset/sass/component/_body.scss
+++ b/resources/asset/sass/component/_body.scss
@@ -4,11 +4,11 @@
   font-family: Hevletica, sans-serif;
 }
 
-.decide_me {
-  background-image: url('/img/decisionHomePage.jpg');
-  height: 95vh;
-  background-size: cover;
-  background-position: center;
+.success {
+  height: auto;
+  width: 100%;
+  color:white;
+  padding: 2rem;
 
   // height: 300px;
   // width: auto;
@@ -17,6 +17,38 @@
 
 .showDecision {
   font-size: 4rem;
-  color: white;
+  //color: white;
+
+}
+
+.dec {
+
+  font-size: 3rem;
+
+}
+
+hr {
+//   border: 4px dashed #1C6EA4;
+// border-radius: 23px;
+
+border: 1px solid #46A514;
+border-radius: 23px;
+
+}
+
+.otherConsideration{
+  background-color: rgba(160, 145, 145, 0.836);
+  color: whitesmoke;
+}
+
+.showDecChart {
+
+  width: fit-content;
+
+}
+
+.showDecision {
+
+  width: fit-content;
 
 }
